2023-12-28T12:10:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7347457834 # 4430
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-28
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2955 / 0 2957 / +0 +2

2023-12-26T00:29:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7325279480 # 4415
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-26
* notice: query file size: 26395
* notice: accum prev / next / diff: re vi: 0 2954 / 0 2955 / +0 +1

2023-12-25T16:07:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7322937534 # 4413
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-25
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2953 / 0 2954 / +0 +1

2023-12-24T20:05:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7316607033 # 4408
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-24
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2952 / 0 2953 / +0 +1

2023-12-23T20:05:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7310227111 # 4402
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-23
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2951 / 0 2952 / +0 +1

2023-12-21T12:11:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7287934833 # 4388